Fix z-index

--- a/style.css
+++ b/style.css
@@ -248,6 +248,8 @@ img{
         height: 100vh; /* Adjust height as needed - 800px*/
         /* Add other styles (background, padding, etc.) */
         transition: bottom 0.3s ease;
+        
+        z-index: 1000;
     }
 
     /* Adjust grid layout for mobile */
@@ -266,6 +268,12 @@ img{
     .header{
         position: fixed;
         width: 100%;
+        
+        top: 0;
+        left: 0;
+        right: 0;
+        
+        z-index: 999;
     }
     
     /* Main */
